--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'se.michaelthelin.spotify:spotify-web-api-java:6.1.0'
 }
